Add: function atv-add
A função de adicionar as atividades foi adicionada a aplicação.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <div class="lista">
         <h1>Lista de Tarefas</h1>
         <input type="text" id="atv-input" placeholder="Adicionar nova atividade">
-        <ul id="lista-atv"></ul>
+        <button id="atv-add">Adicionar</button>
+        <ul id="atv-lista"></ul>
     </div>
     <script src="script.js"></script>
 </body>
